--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,8 +1,8 @@
 <!-- Navbar theme is set in theme-switcher.js -->
 <nav id="navbar" class="navbar fixed-top navbar-expand-sm justify-content-between">
-    <a class="navbar-brand mb-0 h1" href="/">
-        <img src="{{ "/assets/favicon.png" | relative_url }}" width="30" height="30" class="d-inline-block align-top"
-            alt="Y">
+    <a class="navbar-brand mb-0 h1 add-margin-left-normal add-padding-bottom-small" href="/">
+        <img src="{{ "/assets/images/UA_favicon_dark.svg" | relative_url }}" width="30" height="30"
+            class="d-inline-block home-logo favicon" alt="Y">
         <span class="home-title">Yu-Yueh Liu</span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
