--- a/_sass/custom/components/_navbar.scss
+++ b/_sass/custom/components/_navbar.scss
@@ -17,13 +17,15 @@
   }
 
   .nav-item.nav-link {
+    @include relative-font-size(1.1);
     transition: none;
     margin: 0 5px;
+    font-weight: 300;
+    letter-spacing: 0.01em;
     &.active,
-    &:focus,
-    &:hover {
-      color: $hightlight-color;
-      font-weight: 400;
+    &:hover,
+    &:focus {
+      color: var(--highlight-color);
       border-radius: 5px;
       background-color: var(--navbar-background-hover-color);
     }
@@ -34,10 +36,23 @@
     color: var(--main-text-color);
 
     &.active,
-    &:focus,
-    &:hover {
-      color: $hightlight-color;
+    &:hover,
+    &:focus {
+      color: var(--highlight-color);
     }
+  }
+
+  &:hover,
+  .navbar-brand:hover {
+    color: var(--main-text-color);
+  }
+  .home-logo {
+    vertical-align: text-bottom;
+  }
+
+  .home-title {
+    @include relative-font-size(1.6);
+    font-family: $base-font-family;
   }
 }
 
