--- a/_sass/custom/pages/_articles.scss
+++ b/_sass/custom/pages/_articles.scss
@@ -88,7 +88,7 @@
 //         transform: scale(1.05);
 
 //         .article-title {
-//           color: $accent-color;
+//           color: var(--highlight-color); //
 //         }
 //       }
 //     }
