--- a/_sass/custom/utils/_mixins.scss
+++ b/_sass/custom/utils/_mixins.scss
@@ -1,3 +1,3 @@
 @mixin relative-font-size($ratio) {
-  font-size: $base-font-size * $ratio;
+  @include responsive-font-size($base-font-size * $ratio);
 }
