--- a/_sass/custom/components/_canvas.scss
+++ b/_sass/custom/components/_canvas.scss
@@ -115,6 +115,7 @@
       transform-style: preserve-3d;
       top: 50%;
       left: 50%;
+      margin-left: -15px;
       -webkit-transform: translate(-50%, -50%);
       transform: translate(-50%, -50%);
       width: 100px;
