--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,19 +6,25 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
         integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"
+        integrity="sha384-Q8BgkilbsFGYNNiDqJm69hvDS7NCJWOodvfK/cwTyQD4VQA0qKzuPpvqNER1UC0F" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
     <link rel="shortcut icon" class="favicon" type="image/svg"
         href="{{ "/assets/images/UA_favicon_dark.svg" | relative_url }}">
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha384-vk5WoKIaW/vJyUAd9n/wmopsmNhiy+L2Z+SBxGYnUkunIxVxAv/UtMOhba/xskxh"
         crossorigin="anonymous"></script>
-    <script src="{{ "/assets/js/common.js"  | relative_url }}"></script>
-    <script src="{{ "/assets/js/check-dark-theme.js"  | relative_url }}"></script>
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"
+        integrity="sha384-Zm+UU4tdcfAm29vg+MTbfu//q5B/lInMbMCr4T8c9rQFyOv6PlfQYpB5wItcXWe7"
+        crossorigin="anonymous"></script>
     <script src="https://unpkg.com/sweet-scroll@4.0.0/sweet-scroll.min.js"
         integrity="sha384-YeNQy+x5Gp48/m1w+zup7sXeNzVPCC14WVR6+jevxGxvRw/1grCNT4QBzGg8b+ov"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"
         integrity="sha384-3u0U01MLvyGLlqCxH5vNw55TTJ2zWaZDnxbCYz81kDzq3RYYXMVSDPLxPJu+jcCg"
         crossorigin="anonymous"></script>
+    <script src="{{ "/assets/js/common.js"  | relative_url }}"></script>
+    <script src="{{ "/assets/js/check-dark-theme.js"  | relative_url }}"></script>
     {%- seo -%}
 </head>
