--- a/_sass/custom/utils/_mixins.scss
+++ b/_sass/custom/utils/_mixins.scss
@@ -1,3 +1,9 @@
 @mixin relative-font-size($ratio) {
   @include responsive-font-size($base-font-size * $ratio);
 }
+
+@mixin dot {
+  margin: 0 0.75rem;
+  font-weight: 900;
+  content: "\00b7";
+}
