Add pictures to gallery, increase logo size

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -7,6 +7,7 @@
 @import "components/navbar";
 @import "components/canvas";
 @import "components/footer";
+@import "layouts/post";
 @import "pages/about";
 @import "pages/articles";
 @import "pages/home";
