--- a/_sass/custom/pages/_about.scss
+++ b/_sass/custom/pages/_about.scss
@@ -14,7 +14,7 @@
 
   .about-section {
     transform: translate(0, 0);
-    padding: 10vh 0;
+    padding: 10vh 5vh;
 
     ul {
       list-style: none;
