--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,7 +2,7 @@
 <nav id="navbar" class="navbar fixed-top navbar-expand-sm justify-content-between">
     <a class="navbar-brand mb-0 h1 add-margin-left-normal add-padding-bottom-small" href="/">
         <img src="{{ "/assets/images/UA_favicon_dark.svg" | relative_url }}" width="40" height="30"
-            class="d-inline-block home-logo favicon" alt="Y">
+            class="d-inline-block home-logo favicon" alt="UA">
         <span class="home-title">Yu-Yueh Liu</span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -20,4 +20,3 @@
         </div>
     </div>
 </nav>
-<div class="padder"></div>
