--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,9 @@
         type="image/svg" />
     <button id="scroll-to-top" title="Scroll to top">Top</button>
     {% include navbar.html %}
-    {{ content}}
+    <main class="main-body">
+        {{ content}}
+    </main>
     {% include footer.html %}
 </body>
 
