Add styling for posts

--- a/_sass/custom/_variables.scss
+++ b/_sass/custom/_variables.scss
@@ -1,6 +1,9 @@
 // Font
 $base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
   "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$post-font-family: Helvetica Neue, Inter, -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif;
+$post-font: normal normal normal 1rem/1.6 Helvetica Neue, Inter, -apple-system, BlinkMacSystemFont, Helvetica, Arial,
+  sans-serif;
 $base-font-size: 16px !default;
 $base-font-weight: 400 !default;
 $base-line-height: 1.5 !default;
