--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <article class="container post-container">
     <header class="post-header">
-        <h1 class="">{{ page.title | escape }}</h1>
+        <h1 class="post-title">{{ page.title | escape }}</h1>
         <p class="post-meta">
             <a href="/about#me">
                 <img src="{{ "/assets/images/yueh.png" | relative_url }}" width="48" height="48"
@@ -16,7 +16,7 @@ layout: default
             </time>
             {% include reading_time.html text=content %}
         </p>
-        <span class="article-tags">
+        <span class="post-tags">
             {% for tag in page.tags %}
             <a href="/tags/{{tag}}" class="tag">
                 <span>{{ tag }}</span>
