--- a/_sass/custom/_base.scss
+++ b/_sass/custom/_base.scss
@@ -212,6 +212,12 @@ $hidden-direction: ("down", -30), ("up", 30);
   transform: translate(0, 0);
 }
 
+code {
+  border-radius: 5px;
+  padding: 3px 5px;
+  background-color: var(--tag-background-color);
+}
+
 /*
  * Transitions
  */
