--- a/_sass/custom/pages/_articles.scss
+++ b/_sass/custom/pages/_articles.scss
@@ -1,3 +1,7 @@
+.card {
+  color: var(--main-text-color);
+  background-color: var(--card-background-color);
+}
 // .blog {
 //   margin-top: 2rem;
 
