--- a/_sass/custom/utils/_animations.scss
+++ b/_sass/custom/utils/_animations.scss
@@ -133,6 +133,28 @@
   }
 }
 
+@-webkit-keyframes fadeInUp {
+  0% {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInUp {
+  0% {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
 @-webkit-keyframes fadeInRight {
   0% {
     transform: translateX(-20px);
@@ -147,6 +169,28 @@
 @keyframes fadeInRight {
   0% {
     transform: translateX(-20px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0px);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeInLeft {
+  0% {
+    transform: translateX(20px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0px);
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInLeft {
+  0% {
+    transform: translateX(20px);
     opacity: 0;
   }
   100% {
