--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,8 @@ layout: default
         </p>
         <span class="post-tags">
             {% for tag in page.tags %}
-            <a href="/tags/{{tag}}" class="tag">
+            <!-- <a href="/tags/{{tag}}" class="tag"> -->
+            <a href="#" class="tag"></a>
                 <span>{{ tag }}</span>
             </a>
             {% endfor %}
