--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,8 +18,7 @@ layout: default
         </p>
         <span class="post-tags">
             {% for tag in page.tags %}
-            <!-- <a href="/tags/{{tag}}" class="tag"> -->
-            <a href="#" class="tag"></a>
+            <a href="/tags/{{tag}}" class="tag" data-proofer-ignore>
                 <span>{{ tag }}</span>
             </a>
             {% endfor %}
