remove tag link

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,8 @@ layout: default
         </p>
         <span class="post-tags">
             {% for tag in page.tags %}
-            <a href="/tags/{{tag}}" class="tag" data-proofer-ignore>
+            <!-- <a href="/tags/{{tag}}" class="tag"></a> -->
+            <a href="_blank" class="tag" data-proofer-ignore>
                 <span>{{ tag }}</span>
             </a>
             {% endfor %}
