--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,14 +29,8 @@
     <script src="{{ "/assets/js/common.js"  | relative_url }}"></script>
     <script src="{{ "/assets/js/check-dark-theme.js"  | relative_url }}"></script>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168212953-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-168212953-1');
-    </script>
+    {% if jekyll.environment == 'production' %}
+    {% include google-analytics.html %}
+    {% endif %}
     {%- seo -%}
 </head>
