--- a/_sass/custom/_base.scss
+++ b/_sass/custom/_base.scss
@@ -180,6 +180,10 @@ $hidden-direction: ("down", -30), ("up", 30);
 /*
  * Text modifiers
 */
+.text {
+  color: var(--main-text-color);
+}
+
 .error {
   color: red;
 }
