--- a/_includes/card.html
+++ b/_includes/card.html
@@ -5,3 +5,21 @@
         <a href="{{ post.url }}" class="btn btn-primary">Read more</a>
     </div>
 </div>
+<div class="col-md-6 mb-4">
+
+    <div class="list-group-flush">
+        <div class="list-group-item">
+            <p class="mb-0"><i class="fab fa-instagram fa-2x mr-4 blue p-3 white-text rounded "
+                    aria-hidden="true"></i>Photos</p>
+        </div>
+        <div class="list-group-item">
+            <p class="mb-0"> <i class="fab fa-slack-hash fa-2x mr-4 mr-4 red p-3 white-text rounded"
+                    aria-hidden="true"></i>Work</p>
+        </div>
+        <div class="list-group-item">
+            <p class="mb-0"><i class="fab fa-snapchat fa-2x mr-4 mr-4 purple p-3 white-text rounded"
+                    aria-hidden="true"></i>Vacation</p>
+        </div>
+    </div>
+
+</div>
