--- a/_sass/custom/_base.scss
+++ b/_sass/custom/_base.scss
@@ -291,3 +291,10 @@ $fadeIn-direction: ("Down", "Up", "Left", "Right");
     content: "\2022";
   }
 }
+
+hr {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border: 0;
+  border-top: 2px solid rgba(0, 0, 0, 0.1);
+}
