--- a/_sass/custom/pages/_articles.scss
+++ b/_sass/custom/pages/_articles.scss
@@ -1,7 +1,44 @@
-.card {
+.article-item {
+  display: flex;
   color: var(--main-text-color);
   background-color: var(--card-background-color);
+  &.active,
+  &:hover,
+  &:focus {
+    background-color: var(--navbar-background-hover-color);
+  }
+
+  .article-date {
+    color: var(--main-text-light-color);
+    padding-right: 1rem;
+  }
+
+  .article-title {
+    font-weight: bold;
+    &.active,
+    &:hover,
+    &:focus {
+      color: var(--highlight-color);
+    }
+  }
+
+  .article-label {
+    max-width: 100%;
+  }
 }
+
+.articles {
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.latest {
+  border-radius: 5px;
+  font-weight: 500;
+  background-color: rgba(240, 170, 137, 0.918);
+}
+
 // .blog {
 //   margin-top: 2rem;
 
